--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "ts-react-3",
+  "name": "react-webpack-ts",
   "version": "1.0.0",
-  "description": "",
+  "description": "A simple react/typescript project using webpack rather than CRA",
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server --env development",
@@ -10,17 +10,17 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "react": "^16.5.1",
-    "react-dom": "^16.5.1"
+    "react": "^16.8.3",
+    "react-dom": "^16.8.3"
   },
   "devDependencies": {
-    "@types/react": "^16.4.14",
-    "@types/react-dom": "^16.0.7",
-    "ts-loader": "^5.1.1",
-    "tslint": "^5.11.0",
-    "typescript": "^3.0.3",
-    "webpack": "^4.19.0",
-    "webpack-cli": "^3.1.0",
-    "webpack-dev-server": "^3.1.8"
+    "@types/react": "^16.8.4",
+    "@types/react-dom": "^16.8.2",
+    "ts-loader": "^5.3.3",
+    "tslint": "^5.12.1",
+    "typescript": "^3.3.3333",
+    "webpack": "^4.29.5",
+    "webpack-cli": "^3.2.3",
+    "webpack-dev-server": "^3.2.0"
   }
 }
